// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.edpaggregator;

option java_package = "org.wfanet.measurement.internal.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "ImpressionMetadataStateProto";

// The lifecycle state of an impression.
enum ImpressionMetadataState {
  // Default, unspecified state.
  IMPRESSION_METADATA_STATE_UNSPECIFIED = 0;
  // The metadata is active and can be used for fulfillment.
  IMPRESSION_METADATA_STATE_ACTIVE = 1;
  // The metadata has been marked as deleted and will not be used for
  // fulfillment unless explicitly requested.
  IMPRESSION_METADATA_STATE_DELETED = 2;
}